--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "site",
+  "name": "homebridge-acurite",
   "version": "1.0.0",
   "description": "site",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Will MacCormack",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "homebridge"
+  ]
 }
