--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homebridge-acurite",
   "version": "1.0.0",
   "description": "site",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -14,8 +14,13 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1"
   },
+  "engines": {
+   "node": ">=0.12.0",
+   "homebridge": ">=0.2.0"
+  },
   "devDependencies": {},
   "keywords": [
-    "homebridge"
+    "homebridge",
+    "homebridge-plugin"
   ]
 }
